--- a/libneil/src/plugins/zzub_stream/SConscript
+++ b/libneil/src/plugins/zzub_stream/SConscript
@@ -19,29 +19,29 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 Import('pluginenv', 'build_plugin')
-
-if pluginenv['ZZUB_STREAM'] and pluginenv['MAD']:
-	# make sure libmad.lib is in 
-	pluginenv.Append(LIBS = [ "libmad", "sndfile", ] );
-	pluginenv.Append(CPPPATH = [ "resampler" ] );
-
-
-	pluginenv.Append(CCFLAGS = ' `pkg-config --cflags gtk+-2.0` ')
-	pluginenv.Append(LINKFLAGS = ' `pkg-config --libs gtk+-2.0` ')
-
-
-	build_plugin(pluginenv, 'zzub_stream', files=[
-			'main.cpp',
-			'stream_mp3.cpp',
-			'stream_wav.cpp',
-			'stream_wavetable.cpp',
-			'resample.cpp',
-		
-			'resampler/BaseVoiceState.cpp',
-			'resampler/Downsampler2Flt.cpp',
-			'resampler/InterpPack.cpp',
-			'resampler/MipMapFlt.cpp',
-			'resampler/ResamplerFlt.cpp',
-		],
-		helpfiles=[
-	])
+#fixme: don't build plugin using gtk2
+#if pluginenv['ZZUB_STREAM'] and pluginenv['MAD']:
+#    # make sure libmad.lib is in
+#    pluginenv.Append(LIBS = [ "libmad", "sndfile", ] );
+#    pluginenv.Append(CPPPATH = [ "resampler" ] );
+#
+#
+#    pluginenv.Append(CCFLAGS = ' `pkg-config --cflags gtk+-2.0` ')
+#    pluginenv.Append(LINKFLAGS = ' `pkg-config --libs gtk+-2.0` ')
+#
+#
+#    build_plugin(pluginenv, 'zzub_stream', files=[
+#                    'main.cpp',
+#                    'stream_mp3.cpp',
+#                    'stream_wav.cpp',
+#                    'stream_wavetable.cpp',
+#                    'resample.cpp',
+#
+#                    'resampler/BaseVoiceState.cpp',
+#                    'resampler/Downsampler2Flt.cpp',
+#                    'resampler/InterpPack.cpp',
+#                    'resampler/MipMapFlt.cpp',
+#                    'resampler/ResamplerFlt.cpp',
+#            ],
+#            helpfiles=[
+#    ])
