--- a/src/SConscript
+++ b/src/SConscript
@@ -23,3 +23,4 @@ Import('env')
 env.SConscript('neil/SConscript')
 env.SConscript('components/SConscript')
 
+env.AddPostAction('always-install', "rdflib")
