--- a/presets/SConscript
+++ b/presets/SConscript
@@ -1,5 +1,3 @@
-#encoding: latin-1
-
 # Aldrin
 # Modular Sequencer
 # Copyright (C) 2006 The Aldrin Development Team
@@ -20,7 +18,10 @@
 
 Import('env', 'install', 'install_recursive')
 import glob
+import os
 
 for filename in glob.glob('*.prs'):
 	install('${SHARE_PATH}/presets', filename, 0o644)
+
+env.Install(dir='${SETTINGS_PATH}', source='mdaDrumLibrary')
 
