latin-1 encoding broke an accented e

--- a/libneil/src/plugins/SConscript
+++ b/libneil/src/plugins/SConscript
@@ -1,6 +1,4 @@
-#encoding: latin-1
-
-# libzzub, Buzé, Aldrin
+# libzzub, BuzÃ©, Aldrin
 # Modular Sequencer
 # Copyright (C) 2006 The Aldrin Development Team
 #
