hide a bunch of python libs created during the build process

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ libneil/src/libzzub/libzzub.def
 libneil/include/zzub/zzub.h
 libneil/include/zzub/signature.h
 libneil/src/pyzzub/zzub/
+
+src/neil/lib/
