--- a/libneil/src/plugins/lv2adapter/SConscript
+++ b/libneil/src/plugins/lv2adapter/SConscript
@@ -31,7 +31,7 @@ lv2_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3'])
 
 #lv2_pluginenv.Append(CCFLAGS=[ '-DUSE_LILV', '-DUSE_LV2' ])
 
-lv2_pluginenv.Append(CCFLAGS='`pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/lv2adapter')
+lv2_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/lv2adapter')
 
 if pluginenv['LV2'] == True:
-    lv2_build = build_plugin(lv2_pluginenv, 'lv2adapter', [ 'PluginAdapter.cpp', 'Ports.cpp', 'PluginInfo.cpp', 'PluginWorld.cpp', 'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c'])
+    lv2_build = build_plugin(lv2_pluginenv, 'lv2adapter', [ 'PluginAdapter.cpp', 'Ports.cpp', 'PluginInfo.cpp', 'PluginWorld.cpp', 'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c', 'features/worker.cpp'])
