add a cutoff note ( and cents ) parameter to a clone of lunar_delay. so the cutoff frequency can be conveniently changed to a note without using reference tables or manual calculations

--- a/libneil/src/plugins/lunar_delay/SConscript
+++ b/libneil/src/plugins/lunar_delay/SConscript
@@ -1,8 +1,16 @@
 Import('pluginenv', 'build_plugin')
 
-localenv = pluginenv.Clone()
+delayenv = pluginenv.Clone()
+
+
+notedelayenv = pluginenv.Clone()
+notedelayenv.Append(CCFLAGS=['-DUSE_CUTOFF_NOTE=1'])
+notedelayenv['OBJPREFIX'] = 'note_'    # so scons will build a note_Delay.o as well as Delay.o - instead of reusing whichever one gets built first
+notedelayenv.Append(LIBS=['zzub'])     # need libzzub to invoke event when the cutoff_note is changed, this is so the cutoff freq is also updated in the rack display
 
 files = ["Delay.cpp"]
 
-build_plugin(localenv, "lunar_delay", files)
+build_plugin(delayenv, "lunar_delay", files)
+build_plugin(notedelayenv, "lunar_note_delay", files)
+
 	     
