--- a/libneil/src/plugins/vstadapter/SConscript
+++ b/libneil/src/plugins/vstadapter/SConscript
@@ -1,11 +1,11 @@
 Import('pluginenv', 'build_plugin')
 
 vst_pluginenv = pluginenv.Clone()
-vst_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3'])
+vst_pluginenv.Append(LIBS=['boost_system', 'boost_filesystem'])
 
 #lv2_pluginenv.Append(CCFLAGS=[ '-DUSE_LILV', '-DUSE_LV2' ])
 
-vst_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/vstadapter')
+vst_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/vstadapter -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/pluginterfaces/vst2.x -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/public.sdk/source/vst2.x ')
 
-if pluginenv['LV2'] == True:
-    lv2_build = build_plugin(vst_pluginenv, 'vstadapter', [ 'VstAdapter.cpp'])
+#if pluginenv['LV2'] == True:
+vst_build = build_plugin(vst_pluginenv, 'vstadapter', [ 'VstAdapter.cpp', 'VstPlugins.cpp'])
