ignore a build dir

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ libneil/src/libzzub/libzzub.def
 libneil/include/zzub/zzub.h
 libneil/include/zzub/signature.h
 libneil/src/pyzzub/zzub/
+libneil/src/plugins/vstadapter/VST_SDK_2.4
 
 src/neil/lib/
 .qtc_clangd/
