build file for vst3adapter

--- a/libneil/src/plugins/vst3adapter/SConscript
+++ b/libneil/src/plugins/vst3adapter/SConscript
@@ -3,6 +3,6 @@ Import('pluginenv', 'build_plugin')
 vst_pluginenv = pluginenv.Clone()
 vst_pluginenv.Append(LIBS=['boost_system', 'boost_filesystem'])
 
-vst_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/vst3adapter -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/pluginterfaces/vst2.x -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/public.sdk/source/vst2.x ')
+vst_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/vst3adapter/ -Ilibneil/src/plugins/vst3adapter/pluginterfaces -Ilibneil/src/plugins/vst3adapter/public.sdk -Ilibneil/src/plugins/vst3adapter/base -Ilibneil/src/plugins/vst3adapter/vst4gui/vstgui')
 
-vst_build = build_plugin(vst_pluginenv, 'vstadapter', [ 'Vst3Adapter.cpp', 'Vst3Plugins.cpp', 'Vst3Defines.cpp', 'Vst3Parameter.cpp', 'Vst3PluginInfo.cpp'])
+vst_build = build_plugin(vst_pluginenv, 'vst3adapter', [ ])
