--- a/libneil/src/plugins/lv2adapter/SConscript
+++ b/libneil/src/plugins/lv2adapter/SConscript
@@ -33,5 +33,15 @@ lv2_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3'])
 
 lv2_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/lv2adapter')
 
-if pluginenv['LV2'] == True:
-    lv2_build = build_plugin(lv2_pluginenv, 'lv2adapter', [ 'PluginAdapter.cpp', 'PluginAdapterUI.cpp', 'Ports.cpp', 'PluginInfo.cpp', 'PluginWorld.cpp', 'lv2_utils.cpp', 'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c', 'features/worker.cpp'])
+if lv2_pluginenv['LV2'] == True:
+    lv2_files = [ 'lv2_adapter.cpp', 
+        'lv2_adapter_ui.cpp', 
+        'Ports.cpp', 
+        'lv2_zzub_info.cpp', 
+        'PluginWorld.cpp', 
+        'lv2_utils.cpp', 
+        # 'lv2_defines.cpp',  
+        'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c', 'features/worker.cpp'
+    ]
+    
+    lv2_build = build_plugin(lv2_pluginenv, 'lv2adapter', lv2_files)
