--- a/libneil/src/plugins/lv2adapter/SConscript
+++ b/libneil/src/plugins/lv2adapter/SConscript
@@ -29,19 +29,17 @@ Import('pluginenv', 'build_plugin')
 lv2_pluginenv = pluginenv.Clone()
 lv2_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3'])
 
-#lv2_pluginenv.Append(CCFLAGS=[ '-DUSE_LILV', '-DUSE_LV2' ])
-
 lv2_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/lv2adapter')
 
+lv2_files = [ 
+    'lv2_adapter.cpp', 
+    'lv2_adapter_ui.cpp', 
+    'lv2_ports.cpp', 
+    'lv2_zzub_info.cpp', 
+    'lv2_lilv_world.cpp', 
+    'lv2_utils.cpp', 
+    'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c', 'features/worker.cpp'
+]
+
 if lv2_pluginenv['LV2'] == True:
-    lv2_files = [ 'lv2_adapter.cpp', 
-        'lv2_adapter_ui.cpp', 
-        'lv2_ports.cpp', 
-        'lv2_zzub_info.cpp', 
-        'lv2_lilv_world.cpp', 
-        'lv2_utils.cpp', 
-        # 'lv2_defines.cpp',  
-        'ext/lv2_evbuf.c', 'ext/symap.c', 'zix/ring.c', 'features/worker.cpp'
-    ]
-    
     lv2_build = build_plugin(lv2_pluginenv, 'lv2adapter', lv2_files)
