--- a/libneil/src/plugins/vstadapter/SConscript
+++ b/libneil/src/plugins/vstadapter/SConscript
@@ -5,4 +5,4 @@ vst_pluginenv.Append(LIBS=['boost_system', 'boost_filesystem', 'zzub'])
 
 vst_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/vstadapter -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/pluginterfaces/vst2.x -Ilibneil/src/plugins/vstadapter/VST_SDK_2.4/public.sdk/source/vst2.x')
 
-vst_build = build_plugin(vst_pluginenv, 'vstadapter', [ 'VstAdapter.cpp', 'VstPlugins.cpp', 'VstDefines.cpp', 'VstParameter.cpp', 'VstPluginInfo.cpp'])
+vst_build = build_plugin(vst_pluginenv, 'vstadapter', [ 'vst_adapter.cpp', 'vst_plugins.cpp', 'vst_defines.cpp', 'vst_parameter.cpp', 'vst_plugin_info.cpp'])
