--- a/libneil/src/plugins/vst3adapter/SConscript
+++ b/libneil/src/plugins/vst3adapter/SConscript
@@ -71,32 +71,10 @@ vst3_pluginenv.Append(
 )
 
 
-adapter_sources = ['Collection.cpp', 'Info.cpp', 'Param.cpp', 'Defines.cpp']
+adapter_sources = ['Adapter.cpp', 'Collection.cpp', 'Info.cpp', 'Param.cpp', 'Defines.cpp']
 
 vst3_build = build_plugin(
     vst3_pluginenv, 
     'vst3adapter', 
     adapter_sources + common_sdk_sources + linux_sdk_sources,
 )
-
-
-
-
-# [self@fedora neil.v2]$ echo "clang++ -o libneil/lib/zzub/libvst3adapter.so -Wl,--whole-archive -lbase -lpluginterfaces -lsdk     -Wl,--no-whole-archive,-rpath=/home/me/stuff/apps/neil/v3m/lib -shared libneil/src/plugins/vst3adapter/Collection.os libneil/src/plugins/vst3adapter/Info.os libneil/src/plugins/vst3adapter/Param.os libneil/src/plugins/vst3adapter/Defines.os libneil/src/plugins/vst3adapter/vst3sdk/public.sdk/source/vst/hosting/plugprovider.os libneil/src/plugins/vst3adapter/vst3sdk/public.sdk/source/common/threadchecker_linux.os -Llibneil/lib -Llibneil/src/plugins/vst3adapter/vst3sdk/neil-build/lib -lboost_system -lboost_filesystem -lstdc++fs  -lvstgui -lvstgui_standalone -lvstgui_support -lvstgui_uidescription -lsdk_hosting -lsdk_common"
-
-#'vst3sdk/public.sdk/source/vst/hosting/module_linux.cpp',
-
-
-
-# vst3_pluginenv.Append(
-#     CCFLAGS='''
-#     -pthread `pkg-config gtk+-3.0 --cflags` 
-#     -Ilibneil/src/libzzub -Ilibneil/src/utils/ -Ilibneil/src/plugins/vst3adapter/ 
-#     -Ilibneil/src/plugins/vst3adapter/vst3sdk -Ilibneil/src/plugins/vst3adapter/pluginterfaces 
-#     -Ilibneil/src/plugins/vst3adapter/public.sdk -Ilibneil/src/plugins/vst3adapter/base 
-#     -Ilibneil/src/plugins/vst3adapter/vst4gui/vstgui''',
-#     LIBS=['boost_system', 'boost_filesystem', 'stdc++fs'] + vst_libs, 
-#     LIBPATH=lib_subdir,
-#     LINKFLAGS=['--whole-archive']
-# )
-
