reset vst3 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "libneil/src/plugins/vst3adapter/vst3sdk"]
 	path = libneil/src/plugins/vst3adapter/vst3sdk
 	url = https://github.com/steinbergmedia/vst3sdk
+	ignore = untracked
