--- a/libneil/SConscript
+++ b/libneil/SConscript
@@ -400,14 +400,14 @@ if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
     env['CONFIGURED'] = ''
     yesno = {True:'yes', False:'no'}
     conf = Configure(env,
-            custom_tests = {
-                    'HasExecutable' : check_has_executable,
-                    'CommandIsVersion' : check_command_is_version,
-                    'CheckCPUFlag' : check_cpu_flag,
+        custom_tests = {
+            'HasExecutable' : check_has_executable,
+            'CommandIsVersion' : check_command_is_version,
+            'CheckCPUFlag' : check_cpu_flag,
             'CheckPKGConfig' : check_pkg_config,
             'CheckPKG' : check_pkg,
             'CheckPKGVersion' : check_pkg_version,
-            }
+        }
     )
 
     # make sure all the development libraries are installed
@@ -463,7 +463,7 @@ if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
             missing_lv2 += pkg
     
     if missing_lv2:
-        lib_errors += missing_lv2.join()
+        lib_errors += "To build LV2 plugins, install: " + missing_lv2.join()
     else:
         env['LV2'] = True
 
@@ -520,8 +520,6 @@ if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
     print()
     print("Please check if above settings reflect what you want, then build libzzub using")
     print("\tscons")
-    print("To install scons, run")
-    print("\t[sudo] scons install")
     sys.Exit(0)
 
 ######################################
@@ -612,12 +610,12 @@ def build_python_extension(target, source, env):
     pass
 
 builders = dict(
-        BuildConfig = Builder(action = build_buildconfig),
-        Signature = Builder(action = build_signature),
-        PyExtension = Builder(action = build_python_extension),
-        ZIDLCHeader = Builder(action = 'python ${ROOTPATH}/tools/zidl --c-header $TARGET $SOURCE'),
-        ZIDLCDef = Builder(action = 'python ${ROOTPATH}/tools/zidl --c-def $TARGET $SOURCE'),
-        ZIDLPyCtypes = Builder(action = 'python ${ROOTPATH}/tools/zidl --libversion $LIBZZUB_VERSION --py-ctypes $TARGET $SOURCE'),
+    BuildConfig = Builder(action = build_buildconfig),
+    Signature = Builder(action = build_signature),
+    PyExtension = Builder(action = build_python_extension),
+    ZIDLCHeader = Builder(action = 'python ${ROOTPATH}/tools/zidl --c-header $TARGET $SOURCE'),
+    ZIDLCDef = Builder(action = 'python ${ROOTPATH}/tools/zidl --c-def $TARGET $SOURCE'),
+    ZIDLPyCtypes = Builder(action = 'python ${ROOTPATH}/tools/zidl --libversion $LIBZZUB_VERSION --py-ctypes $TARGET $SOURCE'),
 )
 
 env['BUILDERS'].update(builders)
@@ -643,16 +641,16 @@ env.Depends(output, '${ROOTPATH}/tools/zidl')
 #######################################
 
 Export(
-        'install_lib',
-        'install_plugin',
-        'install_bin',
-        'install',
-        'install_root',
-        'install_plugin_help',
-        'install_python_extension',
-        'gcc',
-        'posix',
-        'env',
+    'install_lib',
+    'install_plugin',
+    'install_bin',
+    'install',
+    'install_root',
+    'install_plugin_help',
+    'install_python_extension',
+    'gcc',
+    'posix',
+    'env',
 )
 
 # generate signature
